[package]
name = "rustychat"
version = "0.1.0"
edition = "2021"
authors = ["Nils van Lück", "ClutchFred"]
description = "FOSS voice control plugin for teamspeak 3. Allows to connect games and gamemodes to teamspeak 3."
readme = "README.md"
repository = "https://github.com/vanlueckn/RustyChat"
license = "MIT"
keywords = ["teamspeak", "voice", "roleplay"]

[lib]
name = "rustychat"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts3plugin = { git = "https://github.com/ClutchFred/rust-ts3plugin" }
rasp = { git = "https://github.com/buosseph/rasp" }
simple-websockets = "0.1.6"
tungstenite = "0.20.0"
url = "2.4.0"
serde_repr = "0.1"
iced = "0.9"
iir_filters = "0.1.2"
rand = "0.8.5"
win32console = "0.1.5"
anyhow = "1.0.72"
once_cell = "1.18.0"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[[bin]]
name = "uitest"
path = "src/bin.rs"
